<resources>
    <string name="app_name">Zoo Praha</string>
    <string name="main_button_lexicon_text">Lexikon</string>
    <string name="main_button_adoptions_text">Adopce</string>
    <string name="main_button_events_text">Události</string>
    <string name="main_button_quiz_text">Kvíz</string>
    <string name="main_button_map_text">Mapa</string>
    <string name="main_button_profile_text">Profil</string>
    <string name="list_empty_textview_text">Nebyly nalezeny žádné záznamy</string>
    <string name="fragment_adoption_no_detail_toast">Toto zvíře nemá detail</string>
    <string name="fragment_adoption_visit_yes">s možností návštěv</string>
    <string name="fragment_adoption_visit_no">bez možnosti návštěv</string>
...
    <string name="fragment_event_list_item_date">Datum konání: %1$s</string>
    <string name="fragment_event_list_item_date_unknown">Datum konání: neznámé</string>
    <string name="fragment_event_list_item_dates">Datum konání: %1$s - %2$s</string>
    <string name="quiz_menu_new_game_button_text">Nová hra</string>
    <string name="quiz_menu_leaderboard_button_text">Žebříček</string>
    <string name="quiz_menu_badges_button_text">Medaile</string>
    <string name="quiz_menu_settings_button_text">Nastavení</string>
    <string name="quiz_menu_help_button_text">Nápověda</string>
    <string name="fragment_question_number_textview_text">Otázka č. %1$d</string>
    <string name="fragment_question_score_textview_text">Správně: %1$d / %2$d</string>
    <string name="question_answered_animal_detail_button_text">Detail zvířete</string>
    <string name="question_answered_next_question_button_text">Další otázka</string>
    <string name="question_answered_next_question_button_finish_text">Výsledek</string>
...
    <string name="datafetcher_error_loading_image">Při načítání obrázku došlo k chybě.</string>
    <string name="question_answered_flag_alert_title">Nahlášení chyby</string>
    <string name="question_answered_flag_alert_flagged">Otázka byla nahlášena a její správnost prozkoumáme, děkujeme za reakci!</string>
    <string name="quiz_settings_time_editview_label">Časový limit na odpověď (v\u00A0sekundách)</string>
    <string name="quiz_settings_questions_editview_label">Počet otázek v jedné hře</string>
    <string name="quiz_settings_name_editview_label">Vaše hráčské jméno</string>
    <string name="quiz_settings_save_button_text">Uložit</string>
    <string name="lexicon_menu_tab_taxonommy">Taxonomie</string>
    <string name="lexicon_menu_tab_filters">Ostatní filtry</string>
    <string name="fragment_animal_no_animal_error_text">Litujeme, ale detail zvířete se nepodařilo získat</string>
    <string name="fragment_animal_dialog_image_close">Zavřít</string>
    <string name="quiz_questions_loading_error">Nepodařilo se načíst otázky, zkontrolujte prosím své připojení k Internetu.</string>
    <string name="fragment_list_menu_item_search_text">Hledat</string>
...
    <string name="quiz_help_game_text">Každá z\u00A0otázek má časový limit nutný k\u00A0jejímu zodpovězení. Odpočet začne hned jak je otázka zobrazena a po\u00A0jeho vypršení se otázka považuje za\u00A0špatně zodpovězenou. Volby odpovědi jsou vždy čtyři a jen jedna z\u00A0nich je správná. Na konci každé otázky máte možnost si nechat zobrazit detail zvířete, kterého se týkala a prostudovat ho. Poku
    <string name="quiz_help_leaderboard_text">Na závěr každé hry Vám bude nabídnut její výsledek se statistikami a celkovým skóre. Vaše předchozí skóre si můžete zobrazit v\u00A0žebříčku.</string>
    <string name="quiz_help_settings_text">Některá nastavení kvízu si můžete sami změnit. Jedná se o\u00A0časový limit (stanovený v\u00A0sekundách) omezující dobu odpovědi, počet otázek v\u00A0jedné hře a Vaše uživatelské jméno, které bude spojeno s\u00A0Vašimi výsledky. Nastavení je dostupné z\u00A0hlavního menu kvízu.</string>

    <string-array name="quiz_settings_questions_options_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    
    <plurals name="hours">
...
