<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/ScrollView">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center">

        <Button
            android:id="@+id/quiz_menu_new_game_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/quiz_menu_new_game_button_text"/>
        <Button
            android:id="@+id/quiz_menu_leaderboard_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/quiz_menu_leaderboard_button_text"/>
        <Button
            android:id="@+id/quiz_menu_settings_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/quiz_menu_settings_button_text"/>
        <Button
            android:id="@+id/quiz_menu_help_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/quiz_menu_help_button_text"/>
    </LinearLayout>
</ScrollView>