...
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/main_button_lexicon_text"/>
        <Button
            android:id="@+id/main_button_quiz"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/main_button_quiz_text"/>

...
